# rust-bert

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  requirements.txt  rustfmt.toml
.github/workflows/: continuous-integration.yml
benches/: generation_benchmark.rs  squad_benchmark.rs  sst2_benchmark.rs  summarization_benchmark.rs  tensor_operations_benchmark.rs  token_classification_benchmark.rs  translation_benchmark.rs
examples/: albert.rs  async-sentiment.rs  bart.rs  bert.rs  buffer_resource.rs  codebert.rs  codebert_example.rs  conversation.rs  distilbert_masked_lm.rs  download_all_dependencies.rs  electra.rs  electra_discriminator.rs  electra_masked_lm.rs  electra_ner.rs  generation.rs  generation_gpt2.rs  generation_gpt2_hf_tokenizers.rs  generation_gpt_neo.rs  generation_gptj.rs  generation_reformer.rs  generation_xlnet.rs  gpt2.rs  keyword_extraction.rs  mamba2.rs  masked_language.rs  masked_language_bert.rs  masked_language_model_bert.rs  masked_language_roberta.rs  mobilebert_masked_lm.rs  named_entities_recognition.rs  natural_language_inference_deberta.rs  ner.rs  onnx-causal-generation.rs  onnx-conditional-generation.rs  onnx-distilbert.rs  onnx-masked-lm.rs  onnx-question-answering.rs  onnx-sequence-classification.rs  onnx-summarization.rs  onnx-t5.rs  (+40 more)
src/: bert.rs  convert-tensor.rs  distilbert-base-uncased-finetuned-sst-2-english-config.json  distilbert.rs  lib.rs  main.rs
src/albert/: albert.rs  albert_model.rs  attention.rs  embeddings.rs  encoder.rs  mod.rs  transformer.rs
src/bart/: attention.rs  bart.rs  bart_model.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs
src/bert/: attention.rs  bert.rs  bert_model.rs  embeddings.rs  encoder.rs  mod.rs
src/codebert/: codebert_model.rs  mod.rs
src/common/: activations.rs  config.rs  dropout.rs  embeddings.rs  error.rs  file_utils.rs  kind.rs  linear.rs  mod.rs  resources.rs  summary.rs
src/common/resources/: buffer.rs  local.rs  mod.rs  named_tensors.rs  remote.rs
src/deberta/: attention.rs  deberta_model.rs  embeddings.rs  encoder.rs  mod.rs
src/deberta_v2/: attention.rs  deberta_v2_model.rs  embeddings.rs  encoder.rs  mod.rs
src/distilbert/: attention.rs  distilbert.rs  distilbert_model.rs  dropout.rs  embeddings.rs  mod.rs  sentiment.rs  transformer.rs
src/electra/: electra.rs  electra_model.rs  embeddings.rs  mod.rs
src/fnet/: attention.rs  embeddings.rs  encoder.rs  fnet_model.rs  mod.rs
src/gpt2/: attention.rs  gpt2.rs  gpt2_model.rs  mod.rs  transformer.rs
src/gpt_j/: attention.rs  gpt_j_model.rs  mod.rs  transformer.rs
src/gpt_neo/: attention.rs  decoder.rs  gpt_neo_model.rs  mod.rs
src/longformer/: attention.rs  embeddings.rs  encoder.rs  longformer_model.rs  mod.rs
src/longt5/: attention.rs  encoder.rs  longt5_model.rs  mod.rs
src/m2m_100/: attention.rs  decoder.rs  embeddings.rs  encoder.rs  m2m_100_model.rs  mod.rs
src/marian/: marian.rs  marian_model.rs  mod.rs  translation_presets.rs
src/mbart/: attention.rs  decoder.rs  embeddings.rs  encoder.rs  mbart_model.rs  mod.rs
src/mobilebert/: attention.rs  embeddings.rs  encoder.rs  mobilebert_model.rs  mod.rs
src/models/: mod.rs
src/models/albert/: albert_model.rs  attention.rs  encoder.rs  mod.rs
src/models/bart/: attention.rs  (+3 more)
src/nllb/: mod.rs
src/openai_gpt/: mod.rs  openai_gpt.rs  openai_gpt_model.rs  transformer.rs
src/pegasus/: attention.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs  pegasus_model.rs
src/pipelines/: common.rs  conversation.rs  generation.rs  generation_utils.rs  hf_tokenizers.rs  masked_language.rs  mod.rs  ner.rs  onnx.rs  pos_tagging.rs  question_answering.rs  sentiment.rs  sequence_classification.rs  summarization.rs  text_generation.rs  token_classification.rs  tokenizers.rs  translation.rs  zero_shot_classification.rs
src/prophetnet/: attention.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs  prophetnet_model.rs
src/reformer/: attention.rs  attention_utils.rs  embeddings.rs  encoder.rs  mod.rs  reformer_model.rs
src/roberta/: embeddings.rs  mod.rs  roberta.rs  roberta_model.rs
src/sbert/: config.rs  layers.rs  mod.rs  sbert_model.rs  transformer.rs
src/t5/: attention.rs  encoder.rs  layer_norm.rs  mod.rs  t5.rs  t5_model.rs
src/xlnet/: attention.rs  encoder.rs  mod.rs  xlnet.rs  xlnet_model.rs
tests/: albert.rs  bart.rs  bert.rs  deberta.rs  deberta_v2.rs  distilbert.rs  distilgpt2.rs  electra.rs  fnet.rs  gpt2.rs  gpt_j.rs  gpt_neo.rs  hf_tokenizers.rs  longformer.rs  longt5.rs  m2m100.rs  mamba2.rs  marian.rs  mbart.rs  mobilebert.rs  nllb.rs  onnx.rs  openai_gpt.rs  pegasus.rs  prophetnet.rs  reformer.rs  resources.rs  roberta.rs  sbert.rs  sentence_embeddings.rs  t5.rs  xlnet.rs
utils/: convert_model.py  download-dependencies.py  download-dependencies_albert.py  download-dependencies_bart.py  download-dependencies_bart_cnn.py  download-dependencies_bart_large_mnli.py  download-dependencies_bart_xsum.py  download-dependencies_bert.py  download-dependencies_bert_ner.py  download-dependencies_bert_qa.py  download-dependencies_dialogpt-medium.py  download-dependencies_distilbert-qa.py  download-dependencies_distilbert.py  download-dependencies_distilgpt2.py  download-dependencies_electra-discriminator.py  download-dependencies_electra-generator.py  download-dependencies_electra.py  download-dependencies_electra_ner.py  download-dependencies_gpt2-large.py  download-dependencies_gpt2-medium.py  download-dependencies_gpt2-xl.py  download-dependencies_gpt2.py  download-dependencies_marian_mt_en_fr.py  download-dependencies_openaigpt.py  download-dependencies_reformer.py  download-dependencies_roberta.py  download-dependencies_roberta_qa.py  download-dependencies_sst2_sentiment.py  download-dependencies_t5_base.py  download-dependencies_t5_small.py  download-dependencies_xlm_roberta_ner_dutch.py  download-dependencies_xlm_roberta_ner_english.py  download-dependencies_xlm_roberta_ner_german.py  download-dependencies_xlm_roberta_ner_spanish.py  download-dependencies_xlnet.py  requirements.txt
(+108 files in other folders)
