[package]
name = "rust-bert"
version = "0.19.0"
authors = ["Guillaume Becquin <guillaume.becquin@gmail.com>"]
edition = "2018"
description = "Ready-to-use NLP pipelines and transformer-based models (BERT, DistilBERT, GPT2,...)"
repository = "https://github.com/guillaume-be/rust-bert"
documentation = "https://docs.rs/rust-bert"
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "nlp",
    "deep-learning",
    "machine-learning",
    "transformers",
    "translation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_bert"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "convert-tensor"
path = "src/convert-tensor.rs"
doc = false

[[bench]]
name = "sst2_benchmark"
harness = false

[[bench]]
name = "squad_benchmark"
harness = false

[[bench]]
name = "summarization_benchmark"
harness = false

[[bench]]
name = "translation_benchmark"
harness = false

[[bench]]
name = "generation_benchmark"
harness = false

[[bench]]
name = "tensor_operations_benchmark"
harness = false

[[bench]]
name = "token_classification_benchmark"
harness = false

[profile.bench]
opt-level = 3

[features]
default = ["remote"]
doc-only = ["tch/doc-only"]
all-tests = []
remote = ["cached-path", "dirs", "lazy_static"]

[package.metadata.docs.rs]
features = ["doc-only"]

[dependencies]
rust_tokenizers = "~7.0.2"
tch = "~0.9.0"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
ordered-float = "3.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
thiserror = "1.0.31"
half = "2.1.0"
regex = "1.6.0"

cached-path = { version = "0.5.3", optional = true }
dirs = { version = "4.0.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
anyhow = "1.0.58"
csv = "1.1.6"
criterion = "0.3.6"
tokio = { version = "1.20.0", features = ["sync", "rt-multi-thread", "macros"] }
torch-sys = "0.9.0"
tempfile = "3.3.0"
itertools = "0.10.3"
